--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="btn">click</button>
     <div id="show"></div>
   </div>
-  <script src="src/chapter11/Template.js"></script>
+  <script src="src/chapter14/player.js"></script>
 </body>
 
 </html>
